--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <meta property="og:title" content="Project Alice"/>
   <meta property="og:description" content="Bringing dating back to the bare essentials."/>
 
-<!-- Hotjar Tracking Code for https://francisverhoeven.be -->
+<!-- Hotjar Tracking Code for https://projectalice.eu -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:863978,hjsv:6};
+        h._hjSettings={hjid:1034763,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
