--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
           </ul>
         </div>
         <div class="col-md-4 text-center">
-        	<h4> Project <b>Alice</b> </h4>
+        	<h4 style="margin-bottom: -0.33em;letter-spacing: 0.55px;"> Project <b>Alice</b> </h4>
+        	<h5 style="letter-spacing: 1.6px;"><b>AI</b> Dating Assistant</h5>
           <!-- <a href="#" class="logo"><img src="images/logo.png" alt="New Providence"> </a> -->
         </div>
         <div class="col-md-4">
@@ -120,7 +121,8 @@
         <div class="col-md-8 col-md-offset-2 text-center">
           <h1 class="wow fadeInUp">What if I'd plan your date?</h1>
           <p class="wow fadeInUp" data-wow-delay=".2s">Hi there, I'm <b>Alice</b>! Just tell me a little about yourself and what kind of person you'd like to meet. No more swiping, no more needless chit chat. I'll take care of everything.</p>
-          <a href="https://vimeo.com/249436458" class="btn btn-lg video-btn wow fadeInUp lightbox mfp-iframe" data-wow-delay=".3s" data-effect="mfp-zoom-in"><i class="fa fa-play"></i>Alice? Who the fuck is Alice?</a>
+          <!-- <a href="https://vimeo.com/249436458" class="btn btn-lg video-btn wow fadeInUp lightbox mfp-iframe" data-wow-delay=".3s" data-effect="mfp-zoom-in"><i class="fa fa-play"></i>Sounds great Alice!</a> -->
+          <a href="https://sketch.cloud/s/nD39a/DgeMKW/page-1/login/play" class="btn btn-lg video-btn wow fadeInUp" target="_blank" data-wow-delay=".3s" data-effect="mfp-zoom-in"><i class="fa fa-arrow-right"></i>Sounds great Alice!</a>
         </div>
 
         <!-- iPhone -->  
@@ -478,6 +480,7 @@
       <div class="row">
         <div class="col-md-12">
           <h4>Project <b>Alice</b></h4>
+
           <!-- <img class="logo" src="images/logo.png" alt=""> -->
 
           <p> Bringing dating back to the bare essentials.</p>
